fixed vertical spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -136,7 +136,7 @@ a:focus {
 .intro {
     display: table;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     text-align: center;
     color: #fff;
     background: url(../img/intro-bg.png) no-repeat bottom center scroll;
